# wingpanel-indicator-appicontray

./: README.md  meson.build
debian/: changelog  control  copyright
src/: DBusInterfaces.vala  Indicator.vala  StatusNotifierHost.vala  StatusNotifierWatcher.vala  TrayIcon.vala
vapi/: dbusmenu-gtk3-0.4.vapi
